fix search bar header spacing

--- a/client/scss/_recipeContainer.scss
+++ b/client/scss/_recipeContainer.scss
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+.recipe-container-title {
+  margin: 0;
+}
+
 .fork-history {
   display: flex;
   flex-direction: column;
@@ -32,13 +36,13 @@
       p {
         margin: 3px;
       }
+      .recipe-entry {
+        height: 100px;
+      }
     }
   }
 }
 
-.recipe-container-title {
-  margin: 0;
-}
 
 .recipes-featured {
   .recipe-container {
@@ -66,6 +70,8 @@
   }
 }
 
-.fork-history .recipe-container .recipe-entry {
-  height: 100px;
+.search-results {
+  position: relative;
+  
 }
+
